# libera_operation_code

./: .gitignore  .libera_SW_Calc_operational_code_simple_RTM.py.swp  Dockerfile  README.md  create_input_manifest.py  libera_SW_Calc_operational_code_simple_RTM.py  libera_SW_Calc_operational_code_simple_RTM_test.py  model_input_allsky_ssf_libera.py  nohup.out  pyproject.toml  read_inputmani_create_outputmani.py
CCCma_code/ver10/: README  UA_main.F90  a.out  aerobandpro_new.F90  aerprf.F90  albedo_motran.F90  albedo_motran.mod  attenue6.F90  bandwt.F90  ckdlw5.F90  ckdlw5.mod  ckdsw5.F90  ckdsw5.mod  datcldop4.F90  datcldop4.mod  dstdta.F90  extdta1.F90  extdta2.F90  gasoptl8.F90  gasoptlgh7.F90  gasopts6.F90  getvis.F90  initspecsampl2.F90  kissvec.F90  lattenu7.F90  lgasheat.F90  lw_cld_props3.F90  lwtragh4.F90  lwtragh4st.F90  lwtran4st.F90  lwtran_mcica3.F90  planck4.F90  planck4st.F90  preintp3.F90  preintr4.F90  prfdta.F90  psizes_19.F90  psizes_19.mod  raddriv11.F90  radiation.F90  (+18 more)
data/: L2_calculations.yml  LIBERA_INPUT_MANIFEST_01KB0X2N9JXA2VGEXG1PZXJQV2.json  LIBERA_OUTPUT_MANIFEST_01KB0X2N9JXA2VGEXG1PZXJQV2.json  head.txt
input_data/CERES/: header.text
python/: libera_SW_Calc_operational_code_simple_RTM_test.py
